--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
     </div>
 
 
-
+<!--contenido-->
     <section class="bg-success py-5">
         <div class="container">
             <div class="row align-items-center py-5">
@@ -140,7 +140,7 @@ En Golden Events transformamos tus momentos especiales en recuerdos inolvidables
                 <h1 class="h1">Garantizamos tu Evento</h1>
                 <p>
                    En Golden Events, tu tranquilidad es nuestra prioridad.
-Por eso, garantizamos el éxito de tu evento desde el primer contacto hasta el último aplauso.
+					Por eso, garantizamos el éxito de tu evento desde el primer contacto hasta el último aplauso.</p>
             </div>
         </div>
         <div class="row">
